Modify access rules

--- a/project.config
+++ b/project.config
@@ -10,3 +10,4 @@
 	label-Verified = -1..+1 group Android Maintainers
 	submit = group Android Maintainers
 	push = group Admin-JBQ
+	forgeCommitter = group Admin-JBQ
